--- a/styletable.css
+++ b/styletable.css
@@ -11,6 +11,8 @@ body {
 		max-height: 500px;
 		width: 100%;
 		padding: 20px;
+		margin-top: 50px;
+		margin-bottom: 50px;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-evenly;
